--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Install Ubuntu dependencies
         run: |
-          sudo apt-get -y install gcc build-essential cmake3 g+++ gcc-c++ gdc gcc-gfortran tcl-devel tk-dev git
+          sudo apt-get -y install gcc build-essential cmake g++ gdc gfortran tcl-dev tk-dev git
           sudo apt-get -y install openmpi zlib
 
       - name: Install HYPRE
