--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,8 @@ jobs:
 
       - name: Set Environment variables for installation
         run: |
-          echo ::set-env name=HYPRE_DIR::/opt/hypre
-          echo ::set-env name=PARFLOW_DIR::/opt/parflow
+          echo "HYPRE_DIR=/opt/hypre" >> $GITHUB_ENV
+          echo "PARFLOW_DIR=/opt/parflow" >> $GITHUB_ENV
 
       - name: Install Ubuntu dependencies
         run: |
@@ -39,12 +39,17 @@ jobs:
         run: |
           wget https://github.com/parflow/parflow/archive/v3.7.0.tar.gz -O parflow.tar.gz
           tar xvzf parflow.tar.gz
-          (cd parflow-3.7.0 && mkdir build && cd build && cmake .. -DCMAKE_INSTALL_PREFIX=$PARFLOW_DIR -DHYPRE_ROOT=$HYPRE_DIR -DPARFLOW_AMPS_LAYER=mpi1 -DPARFLOW_AMPS_SEQUENTIAL_IO=true -DPARFLOW_ENABLE_TIMING=true -DPARFLOW_HAVE_CLM=ON)
+          (cd parflow-3.7.0 && mkdir build && cd build && cmake .. -DCMAKE_INSTALL_PREFIX=${PARFLOW_DIR} -DHYPRE_ROOT=${HYPRE_DIR} -DPARFLOW_AMPS_LAYER=mpi1 -DPARFLOW_AMPS_SEQUENTIAL_IO=true -DPARFLOW_ENABLE_TIMING=true -DPARFLOW_HAVE_CLM=ON && make install)
 
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python }}
+
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Run tests
         run: |
