--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,9 +37,8 @@ jobs:
 
       - name: Install Parflow
         run: |
-          wget https://github.com/parflow/parflow/archive/v3.7.0.tar.gz -O parflow.tar.gz
-          tar xvzf parflow.tar.gz
-          (cd parflow-3.7.0 && mkdir build && cd build && cmake .. -DCMAKE_INSTALL_PREFIX=${PARFLOW_DIR} -DHYPRE_ROOT=${HYPRE_DIR} -DPARFLOW_AMPS_LAYER=mpi1 -DPARFLOW_AMPS_SEQUENTIAL_IO=true -DPARFLOW_ENABLE_TIMING=true -DPARFLOW_HAVE_CLM=ON && make install)
+          git clone -b master --single-branch https://github.com/parflow/parflow.git parflow
+          (cd parflow && git checkout 974c7bb && mkdir build && cd build && cmake .. -DCMAKE_INSTALL_PREFIX=${PARFLOW_DIR} -DHYPRE_ROOT=${HYPRE_DIR} -DPARFLOW_AMPS_LAYER=mpi1 -DPARFLOW_AMPS_SEQUENTIAL_IO=true -DPARFLOW_ENABLE_TIMING=true -DPARFLOW_HAVE_CLM=ON && make install)
 
       - name: Setup Python
         uses: actions/setup-python@v2
