--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,13 +27,13 @@ jobs:
       - name: Install Ubuntu dependencies
         run: |
           sudo apt-get -y install gcc build-essential cmake g++ gdc gfortran tcl-dev tk-dev git
-          sudo apt-get -y install openmpi-bin
+          sudo apt-get -y install openmpi-bin libopenmpi-dev
 
       - name: Install HYPRE
         run: |
           wget https://computing.llnl.gov/projects/hypre-scalable-linear-solvers-multigrid-methods/download/hypre-2.11.2.tar.gz -O hypre.tar.gz
           tar xvzf hypre.tar.gz
-          (cd hypre-2.11.2/src && ./configure --prefix=${HYPRE_DIR} --without-MPI && make install)
+          (cd hypre-2.11.2/src && ./configure --prefix=${HYPRE_DIR} && make install)
 
       - name: Install Parflow
         run: |
